# Notebooks

aws/: AWS_Big_Data_Benefits.tiff  AWS_Data_Lake_Reference_Architecture.tiff
data-structures-and-algorithms/: README.md
data-system-architecture/: README.md
data-system-architecture/Data-Analysis/Hive/: Hive.md
data-system-architecture/Data-Analysis/Impala/: Impala.md  README.md
data-system-architecture/Data-Analysis/Spark/: Spark.md
data-system-architecture/Data-Ingestion/Kafka/: Kafka at Scale.md  README.md  Stream Data Platform I.md  Stream Data Platform II.md  The Log.md  getting_started_with_apache_kafka.md  quickstart_kafka.sh  setup_kafka.sh
data-system-architecture/Data-Ingestion/Sqoop/: README.md
data-system-architecture/Hadoop/01-Hadoop-Fundamentals/: Hadoop Distributed File System.md  Hadoop MapReduce.md  Hadoop Resource Management.md  Introduction.md
data-system-architecture/Hadoop/02-Hadoop-Ecosystem/: HBase.md  Hive.md  Oozie.md  Pig.md  Sentry.md  Spark.md  Sqoop.md  Zookeeper.md
data-system-architecture/Serialisation-Format/: Parquet.md  README.md
data-system-architecture/Workflow/: README.md
devops/: CICD_tutorial_1.md  CICD_tutorial_2.md
devops/ansible/: requirements.txt
pytorch/: .gitignore  README.md  pyproject.toml  requirements.txt
pytorch/notebooks/: 00_introduction.ipynb  01_supervised_learning.ipynb  02_gradient_descent.ipynb  03_backpropagation_and_autograd.ipynb  04_linear_regression.ipynb  05_logistic_regression.ipynb  06_wide_and_deep.ipynb  07_custom_dataloader.ipynb
(+30 files in other folders)
