[tool.poetry]
name = "notebooks"
version = "0.1.0"
description = ""
authors = ["Shifath Nafis <shifath.nafis@gmail.com>"]

[tool.poetry.dependencies]
python = "3.7.6"
jupyter = "^1.0.0"
torch = "^1.4.0"
torchvision = "^0.5.0"
tensorboard = "^2.1.1"
matplotlib = "^3.2.0"
plotly = "^4.5.3"
scipy = "^1.4.1"
numpy = "^1.18.1"
tqdm = "^4.43.0"
torchtext = "^0.5.0"
spacy = "^2.2.3"
ipykernel = "^5.1.4"
tabulate = "^0.8.6"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
